--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,6 +60,15 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.weatherDetails {
+  line-height: 1.5;
+  font-size: 1.2rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
 .code {
@@ -81,8 +90,8 @@
 }
 
 .card {
-  margin: 1rem;
-  flex-basis: 45%;
+  /* margin: 1rem; */
+  flex-basis: 100%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
