--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -129,3 +129,11 @@
     flex-direction: column;
   }
 }
+
+.searchInput {
+  display: block;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 10px 15px;
+  width: 100%;
+}
