--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,12 @@
+/**
+ * Styles.
+ */
+
 .container {
+  background-image: url('https://images.unsplash.com/photo-1584268512354-693550089634?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2069&q=80');
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -143,6 +151,7 @@
 }
 
 .temperature {
+  cursor: pointer;
   font-size: 5rem;
   margin: 0 auto;
 }
